--- a/templates/LoginWindow.html
+++ b/templates/LoginWindow.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Istanbul Hub Login</title>
+    <title></title>
 </head>
 <body style="-webkit-app-region: drag">
    
@@ -27,7 +27,7 @@
     </div>
 </body>
 
-<script src="./LoginWindow.js"></script>
+<script src="../assets/JS/LoginWindow.js"></script>
 
 </html>
 
