--- a/templates/html.html
+++ b/templates/html.html
@@ -172,10 +172,10 @@
                 <img src="https://crew.istanbulvirtual.com/public/assets/images/circle-logo.png" alt="" srcset="">
             </div> -->
             <h2 style="display: flex; align-items: center;"> 
-               TGCC  <p style="margin-left: 5px; font-size: 15px; font-weight: bolder;" id="version"></p>
+               TGCC <p style="margin-left: 5px; font-size: 15px; font-weight: bolder;" id="version"></p>
             </h2>
             <h5 style="color: #e00000;">
-                
+                Simulation Use Only
             </h5>
             <div class="menu">
                 <button class="btn" id="closeBtn">
@@ -185,8 +185,42 @@
         </div>
     </div>
     <div class="content">
-      
-       
+        <button id="checklist737" class="item">
+            <img src="b738.png" alt="">
+            <div class="item-text">
+                <h5 class="item-title">B737 Checklist</h5>
+            </div>
+        </button>
+        <button id="checklist320" class="item">
+            <img src="a320.png" alt="">
+            <div class="item-text">
+                <h5 class="item-title">A320 Checklist</h5>
+            </div>
+        </button>
+        <button id="checklist777" class="item">
+            <img src="b777.png" alt="">
+            <div class="item-text">
+                <h5 class="item-title">B777 Checklist</h5>
+            </div>
+        </button>
+        <button id="checklist333" class="item">
+            <img src="a333.png" alt="">
+            <div class="item-text">
+                <h5 class="item-title">A330 Checklist</h5>
+            </div>
+        </button>
+        <button id="callsigngenerator" class="item">
+            <img src="callsign.png" alt="">
+            <div class="item-text">
+                <h5 class="item-title">Callsign Generator</h5>
+            </div>
+        </button>
+        <button id="yourefb" class="item">
+            <img src="yourefb.png" alt="">
+            <div class="item-text">
+                <h5 class="item-title">Your EFB</h5>
+            </div>
+        </button>
         <!-- <input hidden id="downloaditem" webkitdirectory directory type="file">  -->
     </div>
     <style>
@@ -216,6 +250,6 @@
         </button>
     </div>
 
-    <script src="../assets/JS/mainWindow.js"></script>
+    <script src="./assets/mainWindow.js"></script>
 </body>
 </html>
